--- a/Citrate use in the LTEE.ipynb
+++ b/Citrate use in the LTEE.ipynb
@@ -19,7 +19,26 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "building empty layout model\n",
+      "models will need to be added with layout.add_model()\n",
+      "Warning: The added metabolite (glc__D_e) is not able to be taken up by any of the current models\n",
+      "Warning: The added metabolite (cit_e) is not able to be taken up by any of the current models\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\layout.py:1024: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  self.media = pd.concat([self.media,\n"
+     ]
+    }
+   ],
    "source": [
     "import cometspy as c\n",
     "import matplotlib as plt\n",
@@ -36,9 +55,14 @@
     "layout.set_specific_metabolite('cit_e', 0.0017)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:10:27.312829100Z",
+     "start_time": "2024-05-30T13:10:19.298840800Z"
+    }
    },
-   "id": "93e7ec5352ddfb25"
+   "id": "93e7ec5352ddfb25",
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -54,10 +78,44 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read LP format model from file C:\\Users\\99374\\AppData\\Local\\Temp\\tmpzx5t_7kr.lp\n",
+      "Reading time = 0.03 seconds\n",
+      ": 1805 rows, 5166 columns, 20366 nonzeros\n",
+      "Read LP format model from file C:\\Users\\99374\\AppData\\Local\\Temp\\tmpzj34sgvv.lp\n",
+      "Reading time = 0.03 seconds\n",
+      ": 1805 rows, 5166 columns, 20366 nonzeros\n",
+      "Read LP format model from file C:\\Users\\99374\\AppData\\Local\\Temp\\tmpq1l3ts57.lp\n",
+      "Reading time = 0.03 seconds\n",
+      ": 1805 rows, 5166 columns, 20366 nonzeros\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:623: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  self.smat = pd.concat([self.smat, cdf])\n",
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:636: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
+      "  self.objective = [int(self.reactions[self.reactions.\n",
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:623: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  self.smat = pd.concat([self.smat, cdf])\n",
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:636: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
+      "  self.objective = [int(self.reactions[self.reactions.\n",
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:623: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  self.smat = pd.concat([self.smat, cdf])\n",
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:636: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
+      "  self.objective = [int(self.reactions[self.reactions.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the E. coli iJO1366 model \n",
-    "mod  = cobra.io.load_model('ecoli')\n",
+    "mod  = cobra.io.load_json_model(\"iJO1366.json\")\n",
     "\n",
     "# Set exchange reaction lower bounds to -1000 to allow them being controlled by COMETS \n",
     "for i in mod.reactions:\n",
@@ -89,9 +147,14 @@
     "layout.add_model(p3)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:11:03.703415900Z",
+     "start_time": "2024-05-30T13:10:27.318350900Z"
+    }
    },
-   "id": "17e4a6903d4e7e77"
+   "id": "17e4a6903d4e7e77",
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -118,9 +181,14 @@
     "b_params.all_params['minSpaceBiomass'] = 3.8e-13"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:11:03.713278Z",
+     "start_time": "2024-05-30T13:11:03.710772800Z"
+    }
    },
-   "id": "25a408804d81fac6"
+   "id": "25a408804d81fac6",
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -134,7 +202,30 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Running COMETS simulation ...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 6\u001B[0m\n\u001B[0;32m      4\u001B[0m batch_test \u001B[38;5;241m=\u001B[39m c\u001B[38;5;241m.\u001B[39mcomets(layout, b_params)\n\u001B[0;32m      5\u001B[0m batch_test\u001B[38;5;241m.\u001B[39mparameters\u001B[38;5;241m.\u001B[39mall_params[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmaxCycles\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mint\u001B[39m(\u001B[38;5;241m900\u001B[39m\u001B[38;5;241m*\u001B[39mcycles_per_day)\n\u001B[1;32m----> 6\u001B[0m batch_test\u001B[38;5;241m.\u001B[39mrun()\n\u001B[0;32m      7\u001B[0m phase_1 \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame({\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAncestor\u001B[39m\u001B[38;5;124m'\u001B[39m : batch_test\u001B[38;5;241m.\u001B[39mtotal_biomass\u001B[38;5;241m.\u001B[39mAncestor\u001B[38;5;241m/\u001B[39m(\u001B[38;5;241m3.9e-13\u001B[39m),\n\u001B[0;32m      8\u001B[0m                         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCitT\u001B[39m\u001B[38;5;124m'\u001B[39m : batch_test\u001B[38;5;241m.\u001B[39mtotal_biomass[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCit+\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m/\u001B[39m(\u001B[38;5;241m3.9e-13\u001B[39m),\n\u001B[0;32m      9\u001B[0m                         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCitTdctA\u001B[39m\u001B[38;5;124m'\u001B[39m : batch_test\u001B[38;5;241m.\u001B[39mtotal_biomass[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCit++\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m/\u001B[39m(\u001B[38;5;241m3.9e-13\u001B[39m),\n\u001B[0;32m     10\u001B[0m                         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGenerations\u001B[39m\u001B[38;5;124m'\u001B[39m : \u001B[38;5;241m6.67\u001B[39m\u001B[38;5;241m*\u001B[39m(batch_test\u001B[38;5;241m.\u001B[39mtotal_biomass\u001B[38;5;241m.\u001B[39mcycle\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m)\u001B[38;5;241m/\u001B[39mcycles_per_day \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m25000\u001B[39m})\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# At roughly Generation 31,000 we introduce the CitT genotype and run for around 2000 Generations\u001B[39;00m\n",
+      "File \u001B[1;32m~\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\comets.py:362\u001B[0m, in \u001B[0;36mcomets.run\u001B[1;34m(self, delete_files)\u001B[0m\n\u001B[0;32m    359\u001B[0m c_package \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mworking_dir \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m.current_package\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m+\u001B[39m to_append\n\u001B[0;32m    360\u001B[0m c_script \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mworking_dir \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m.current_script\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m+\u001B[39m to_append\n\u001B[1;32m--> 362\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlayout\u001B[38;5;241m.\u001B[39mwrite_necessary_files(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mworking_dir, to_append)\n\u001B[0;32m    364\u001B[0m \u001B[38;5;66;03m# self.layout.write_layout(self.working_dir + '.current_layout')\u001B[39;00m\n\u001B[0;32m    365\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparameters\u001B[38;5;241m.\u001B[39mwrite_params(c_global, c_package)\n",
+      "File \u001B[1;32m~\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\layout.py:634\u001B[0m, in \u001B[0;36mlayout.write_necessary_files\u001B[1;34m(self, working_dir, to_append)\u001B[0m\n\u001B[0;32m    614\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mwrite_necessary_files\u001B[39m(\u001B[38;5;28mself\u001B[39m, working_dir : \u001B[38;5;28mstr\u001B[39m, to_append \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n\u001B[0;32m    615\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    616\u001B[0m \u001B[38;5;124;03m    writes the layout and the model files to file\u001B[39;00m\n\u001B[0;32m    617\u001B[0m \u001B[38;5;124;03m    \u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    632\u001B[0m \n\u001B[0;32m    633\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 634\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m__check_if_initial_pops_in_range()\n\u001B[0;32m    635\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mwrite_layout(working_dir, to_append)\n\u001B[0;32m    636\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mwrite_model_files(working_dir)\n",
+      "File \u001B[1;32m~\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\layout.py:1419\u001B[0m, in \u001B[0;36mlayout.__check_if_initial_pops_in_range\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m   1417\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodels:\n\u001B[0;32m   1418\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m founder \u001B[38;5;129;01min\u001B[39;00m m\u001B[38;5;241m.\u001B[39minitial_pop:\n\u001B[1;32m-> 1419\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m (founder[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m<\u001B[39m \u001B[38;5;241m0\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m (founder[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m>\u001B[39m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mgrid[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m)):\n\u001B[0;32m   1420\u001B[0m             message \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mthe initial pop of a model is outside of layout.grid.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1421\u001B[0m             message \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m Either increase layout.grid or adjust \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mm\u001B[38;5;241m.\u001B[39mid\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms initial_pop\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "cycles_per_day = 24.0/b_params.all_params['timeStep']\n",
     "\n",
@@ -171,17 +262,14 @@
     "                        'Generations' : 6.67*(batch_test.total_biomass.cycle)/cycles_per_day + max(phase_2.Generations) })"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:26:02.247225300Z",
+     "start_time": "2024-05-30T13:26:00.320024700Z"
+    }
    },
-   "id": "d025ce1053c71edd"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "94279c4f6ea4d38d"
+   "id": "d025ce1053c71edd",
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -207,7 +295,10 @@
     "final_df = final_df[np.round((final_df.Generations - 25000) % 6.67,3) == 6.67]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-05-30T13:17:43.010477500Z"
+    }
    },
    "id": "75d8cc0be18b86af"
   }
