--- a/Demographic noise with two strains.ipynb
+++ b/Demographic noise with two strains.ipynb
@@ -24,9 +24,14 @@
     "import cometspy as c"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:48:49.888445Z",
+     "start_time": "2024-05-30T13:48:46.163750900Z"
+    }
    },
-   "id": "23421b1f1a10db87"
+   "id": "23421b1f1a10db87",
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -45,9 +50,14 @@
     "ecoli = cobra.io.load_model('textbook')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:48:50.255767300Z",
+     "start_time": "2024-05-30T13:48:49.891734100Z"
+    }
    },
-   "id": "bcb3abddf0d14ef8"
+   "id": "bcb3abddf0d14ef8",
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -61,7 +71,29 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:623: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  self.smat = pd.concat([self.smat, cdf])\n",
+      "C:\\Users\\99374\\.conda\\envs\\CarveMe\\Lib\\site-packages\\cometspy\\model.py:636: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
+      "  self.objective = [int(self.reactions[self.reactions.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "model.add_nonlinear_diffusion_parameters() got an unexpected keyword argument 'convNonlinDiffZero'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m ecoli_comets \u001B[38;5;241m=\u001B[39m c\u001B[38;5;241m.\u001B[39mmodel(ecoli)\n\u001B[0;32m      3\u001B[0m ecoli_comets\u001B[38;5;241m.\u001B[39mreactions\u001B[38;5;241m.\u001B[39mloc[ecoli_comets\u001B[38;5;241m.\u001B[39mreactions\u001B[38;5;241m.\u001B[39mEXCH, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mLB\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1000\u001B[39m\n\u001B[1;32m----> 4\u001B[0m ecoli_comets\u001B[38;5;241m.\u001B[39madd_nonlinear_diffusion_parameters(convNonlinDiffZero \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0.\u001B[39m,\n\u001B[0;32m      5\u001B[0m                                     convNonlinDiffN \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m6.e-6\u001B[39m,\n\u001B[0;32m      6\u001B[0m                                     convNonlinDiffExponent \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1.0\u001B[39m,\n\u001B[0;32m      7\u001B[0m                                     convNonlinDiffHillN \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m2.\u001B[39m,\n\u001B[0;32m      8\u001B[0m                                     convNonlinDiffHillK \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0.001\u001B[39m)\n\u001B[0;32m      9\u001B[0m ecoli_comets\u001B[38;5;241m.\u001B[39madd_neutral_drift_parameter(\u001B[38;5;241m0.01\u001B[39m)\n",
+      "\u001B[1;31mTypeError\u001B[0m: model.add_nonlinear_diffusion_parameters() got an unexpected keyword argument 'convNonlinDiffZero'"
+     ]
+    }
+   ],
    "source": [
     "grid_size = 40\n",
     "ecoli_comets = c.model(ecoli)\n",
@@ -74,9 +106,14 @@
     "ecoli_comets.add_neutral_drift_parameter(0.01)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:48:51.447564800Z",
+     "start_time": "2024-05-30T13:48:50.259030100Z"
+    }
    },
-   "id": "36c2b560ef288ec3"
+   "id": "36c2b560ef288ec3",
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -101,7 +138,10 @@
     "ecoli_comets2.initial_pop = [[x, 0, np.random.normal(6.4e-5, 1e-6)] for x in range(grid_size)]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-05-30T13:48:51.444292300Z"
+    }
    },
    "id": "7e7016470b7aca00"
   },
@@ -132,7 +172,10 @@
     "    ly.set_specific_static_at_location(\"glc__D_e\", (x, grid_size-1), 1.1e-3)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-05-30T13:48:51.451154600Z"
+    }
    },
    "id": "747fa49414d07d1"
   },
@@ -171,7 +214,10 @@
     "p.all_params[\"exchangestyle\"] = \"Monod Style\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-05-30T13:48:51.455831700Z"
+    }
    },
    "id": "b6f035e055137cea"
   },
@@ -193,7 +239,11 @@
     "sim.run()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:48:51.463510400Z",
+     "start_time": "2024-05-30T13:48:51.459929400Z"
+    }
    },
    "id": "137f412f65b0db75"
   },
@@ -222,7 +272,11 @@
     "plt.imshow(final)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-30T13:48:51.514756300Z",
+     "start_time": "2024-05-30T13:48:51.464527300Z"
+    }
    },
    "id": "f9ac53a03b8173a7"
   }
